--- a/examples/model.html
+++ b/examples/model.html
@@ -57,6 +57,7 @@
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='face_recognition/'>Face Recognition</a></li>
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
+              <li><a href='style_transfer/'>Style Transfer</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='speech_commands/'>Speech Commands</a></li>
@@ -204,6 +205,26 @@
       <div class="table-responsive">
         <table id='modelcv-fld' class='modelcv table table-borderless table-hover'>
           <caption>Facial Landmark Detection - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <h4 class='text-center'>
+        <a href='style_transfer/'>Style Transfer</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-st' class='modelcv table table-borderless table-hover'>
+          <caption>Style Transfer - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
