--- a/examples/index.html
+++ b/examples/index.html
@@ -57,6 +57,7 @@
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='face_recognition/'>Face Recognition</a></li>
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
+              <li><a href='style_transfer/'>Style Transfer</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='speech_commands/'>Speech Commands</a></li>
@@ -248,17 +249,19 @@
           <div class='card card-block text-center'>
             <div>
               <div class='feature-icon disabled'>
-                <svg aria-hidden='true' data-prefix='fas' data-icon='palette' class='svg-inline--fa fa-palette fa-w-16'
-                  role='img' viewBox='0 0 512 512'>
-                  <path fill='currentColor'
-                    d='M204.3 5C104.9 24.4 24.8 104.3 5.2 203.4c-37 187 131.7 326.4 258.8 306.7 41.2-6.4 61.4-54.6 42.5-91.7-23.1-45.4 9.9-98.4 60.9-98.4h79.7c35.8 0 64.8-29.6 64.9-65.3C511.5 97.1 368.1-26.9 204.3 5zM96 320c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm32-128c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128-64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z'>
-                  </path>
-                </svg>
+                <a href='style_transfer/'>
+                  <svg aria-hidden='true' data-prefix='fas' data-icon='palette' class='svg-inline--fa fa-palette fa-w-16'
+                    role='img' viewBox='0 0 512 512'>
+                    <path fill='currentColor'
+                      d='M204.3 5C104.9 24.4 24.8 104.3 5.2 203.4c-37 187 131.7 326.4 258.8 306.7 41.2-6.4 61.4-54.6 42.5-91.7-23.1-45.4 9.9-98.4 60.9-98.4h79.7c35.8 0 64.8-29.6 64.9-65.3C511.5 97.1 368.1-26.9 204.3 5zM96 320c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm32-128c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128-64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z'>
+                    </path>
+                  </svg>
+                </a>
               </div>
             </div>
             <div>
               <h3 class='disabled'>
-                Style Transfer
+                <a href='style_transfer/'>Style Transfer</a>
               </h3>
               <p>
                 Transfering makeup style of the sample makeup image to facial image to check how the selected makeup
