--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -57,6 +57,7 @@
               <li><a href='../skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='../face_recognition/'>Face Recognition</a></li>
               <li><a href='../facial_landmark_detection/'>Facial Landmark Detection</a></li>
+              <li><a href='../style_transfer/'>Style Transfer</a></li>
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='../speech_commands/'>Speech Commands</a></li>
