add id=imagetab back

--- a/examples/style_transfer/index.html
+++ b/examples/style_transfer/index.html
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class='tab-content clearfix row'>
-        <div class='tab-pane text-center active col-sm'>
+        <div class='tab-pane text-center active col-sm' id='imagetab'>
           <div class='icdisplay' style='display: none;'>
             <div class='col-lg-12 col-xs-12 text-center'>
               <div class='row'>
