--- a/examples/style_transfer/index.html
+++ b/examples/style_transfer/index.html
@@ -8,8 +8,10 @@
     height: 0 !important;
   }
 
-  #inputCanvas, #outputCanvas {
-    max-width: 76vw !important;
+  @media (max-width: 768px) {
+    #inputCanvas, #outputCanvas {
+      max-width: 76vw !important;
+    }
   }
 
   .gallery {
@@ -39,6 +41,68 @@
 
   .hl {
     border: 2px solid rgba(25, 190, 225, 1.0);
+  }
+
+  #stname {
+    padding: 4px 1rem;
+    display: inline-block;
+    margin-bottom: 1rem;
+  }
+
+  @-webkit-keyframes slideIn {
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  }
+  @keyframes slideIn {
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+  }
+
+  #stname .vg {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  #stname {
+    color: rgba(15, 76, 129, 1.0);
+    margin-left: 0rem;
+    font-size: 0.6rem;
+    transition: transform 350ms ease;
+  }
+
+  #stname .vg div, #stname .vg strong {
+    display: inline-block;
+    opacity: 0;
+    transform: translate3d(-1rem, 0, 0);
+    animation: slideIn 400ms ease forwards;
+  }
+
+  #stname .vg div {
+    color: rgba(15, 76, 129, 0.75);
+    animation-delay: 700ms;
+    text-transform: uppercase;
+  }
+
+  #stname .vg div span {
+    background-color: rgba(15, 76, 129, 1.0);
+    color: #fff;
+    padding: 2px 0px 2px 6px;
+    display: inline-block;
+    transform: skewX(-15deg);
+    border-radius: 3px;
+    font-weight: 800;
+  }
+
+  #stname .vg strong {
+    font-size: 1.0rem;
+    font-weight: 400;
+    animation-delay: 750ms;
   }
 </style>
 
