[Style Transfer] Fix UI issue in mobile view

--- a/examples/style_transfer/index.html
+++ b/examples/style_transfer/index.html
@@ -9,7 +9,7 @@
   }
 
   @media (max-width: 768px) {
-    #inputCanvas, #outputCanvas {
+    #inputCanvas, #outputCanvas, #camInCanvas, #camOutCanvas {
       max-width: 76vw !important;
     }
   }
