--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -390,6 +390,15 @@
     </div>
   </div>
 
+  <script>
+      try {
+        window.nodeRequire = require;
+        delete window.exports;
+        delete window.module;
+      } catch(e) {
+        console.log("Node module is not supported");
+      }
+  </script>
   <script src='../static/lib/jquery/jquery.min.js'></script>
   <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
@@ -411,6 +420,7 @@
   <script src='../util/BaseRunner.js'></script>
   <script src='../util/WebNNRunner.js'></script>
   <script src='../util/OpenCVRunner.js'></script>
+  <script src='../util/OpenVINORunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseCameraExample.js'></script>
@@ -436,6 +446,7 @@
   <script src='SemanticSegmentationRunner.js'></script>
   <script src='SemanticSegmentationExample.js'></script>
   <script src='SemanticSegmentationOpenCVRunner.js'></script>
+  <script src='SemanticSegmentationOpenVINORunner.js'></script>
   <script src='main.js'></script>
 
 
