--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -402,6 +402,16 @@
       </div>
     </div>
   </div>
+
+  <script>
+      try {
+        window.nodeRequire = require;
+        delete window.exports;
+        delete window.module;
+      } catch(e) {
+        console.log("Node module is not supported");
+      }
+  </script>
   <script src='../static/lib/jquery/jquery.min.js'></script>
   <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
@@ -420,6 +430,7 @@
   <script src='../util/modelZoo.js'></script>
   <script src='../util/BaseRunner.js'></script>
   <script src='../util/WebNNRunner.js'></script>
+  <script src='../util/OpenVINORunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseMircophoneExample.js'></script>
