--- a/examples/speech_recognition/index.html
+++ b/examples/speech_recognition/index.html
@@ -302,6 +302,16 @@
       </div>
     </div>
   </div>
+
+  <script>
+      try {
+        window.nodeRequire = require;
+        delete window.exports;
+        delete window.module;
+      } catch(e) {
+        console.log("Node module is not supported");
+      }
+  </script>
   <script src='../static/lib/jquery/jquery.min.js'></script>
   <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
@@ -320,6 +330,7 @@
   <script src='../util/modelZoo.js'></script>
   <script src='../util/BaseRunner.js'></script>
   <script src='../util/WebNNRunner.js'></script>
+  <script src='../util/OpenVINORunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseMircophoneExample.js'></script>
@@ -330,6 +341,7 @@
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
 
   <script src='SpeechRecognitionRunner.js'></script>
+  <script src='SpeechRecognitionOpenVINORunner.js'></script>
   <script src='SpeechRecognitionExample.js'></script>
   <script src='main.js'></script>
 
