--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -398,6 +398,7 @@
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
+  <script src='../static/lib/protobuf.min.js'></script>
   <script src='../static/lib/iro.min.js'></script>
 
   <script src='../static/js/ui.common.js'></script>
