--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -398,6 +398,7 @@
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
+  <script src='../static/lib/protobuf.min.js'></script>
   <script src='../static/lib/iro.min.js'></script>
 
   <script src='../static/js/ui.common.js'></script>
@@ -419,6 +420,9 @@
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
+  <script src='../util/onnx/onnx.js'></script>
+  <script src='../util/onnx/OnnxModelUtils.js'></script>
+  <script src='../util/onnx/OnnxModelImporter.js'></script>
   <script src='../util/openvino/openvino.js'></script>
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
