--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -109,6 +109,15 @@
               </div>
             </td>
           </tr>
+          <tr class="openvinojsbackend", style="display:none;">
+            <th class='text-center'>Backend</th>
+            <td>
+              <input type='radio' name='openvinojsbackend' class='d-none' id='openvinojscpu' value='CPU'>
+              <label id='l-openvinojscpu' for='openvinojscpu' class='checked'>CPU</label>
+              <input type='radio' name='openvinojsbackend' class='d-none' id='openvinojsgpu' value='GPU'>
+              <label id='l-openvinojsgpu' for='openvinojsgpu'>GPU</label>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
