Update Fast, Sustained, Fast text for WebNN

--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -90,13 +90,13 @@
               <div class='g b-webnn'>
                 <span id='backendwebnntitle'>WebNN</span>
                 <input type='radio' name='bw' class='d-none' id='fast' value='fast'>
-                <label id='l-fast' for='fast' class='lml'>FAST_SINGLE_ANSWER</label>
+                <label id='l-fast' for='fast' class='lml'>WebNN (Fast)</label>
                 <input type='radio' name='bw' class='d-none' id='sustained' value='sustained'>
-                <label id='l-sustained' for='sustained' class='lml'>SUSTAINED_SPEED</label>
+                <label id='l-sustained' for='sustained' class='lml'>WebNN (Sustained)</label>
                 <input type='radio' name='bw' class='d-none' id='low' value='low'>
-                <label id='l-low' for='low' class='lml'>LOW_POWER</label>
+                <label id='l-low' for='low' class='lml'>WebNN (Low Power)</label>
                 <input type='radio' name='bw' class='d-none' id='ultra_low' value='ultra_low'>
-                <label id='l-ultra_low' for='ultra_low' class='lml'>ULTRA_LOW_POWER</label>
+                <label id='l-ultra_low' for='ultra_low' class='lml'>WebNN (Ultra Low Power)</label>
               </div>
             </td>
           </tr>
