--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -90,11 +90,11 @@
               <div class='g b-webnn'>
                 <span id='backendwebnntitle'>WebNN</span>
                 <input type='radio' name='bw' class='d-none' id='fast' value='fast'>
-                <label id='l-fast' for='fast' class='lml'>FAST_SINGLE_ANSWER</label>
+                <label id='l-fast' for='fast' class='lml'>WebNN (Fast)</label>
                 <input type='radio' name='bw' class='d-none' id='sustained' value='sustained'>
-                <label id='l-sustained' for='sustained' class='lml'>SUSTAINED_SPEED</label>
+                <label id='l-sustained' for='sustained' class='lml'>WebNN (Sustained)</label>
                 <input type='radio' name='bw' class='d-none' id='low' value='low'>
-                <label id='l-low' for='low' class='lml'>LOW_POWER</label>
+                <label id='l-low' for='low' class='lml'>WebNN (Low Power)</label>
               </div>
             </td>
           </tr>
