Add steps of running OpenCV Workload on page.

--- a/workload/index.html
+++ b/workload/index.html
@@ -154,6 +154,14 @@
               </div>
             </div>
           </div>
+          <div id='steps'>
+            <h4>Steps to test OpenCV Workload</h4>
+            1.	Quit any running instance of Chrome<br>
+            2.	Run your favorite terminal emulator<br>
+            3.	In the terminal, run command: google-chrome --enable-features=SharedArrayBuffer<br>
+            4.	Visit https://intel.github.io/webml-polyfill/workload<br>
+            5.	Run the OpenCV.js workload<br><br>
+          </div>
           <button type="button" id="runbutton" class="btn btn-primary">Run</button>
             (It will take several minutes)
           <div>
