--- a/examples/style_transfer/index.html
+++ b/examples/style_transfer/index.html
@@ -9,7 +9,11 @@
   }
 
   @media (max-width: 768px) {
-    #inputCanvas, #outputCanvas, #camInCanvas, #camOutCanvas {
+
+    #inputCanvas,
+    #outputCanvas,
+    #camInCanvas,
+    #camOutCanvas {
       max-width: 76vw !important;
     }
   }
@@ -50,17 +54,18 @@
   }
 
   @-webkit-keyframes slideIn {
-  to {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
   }
-  }
+
   @keyframes slideIn {
     to {
       opacity: 1;
       -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
     }
   }
 
@@ -76,7 +81,8 @@
     transition: transform 350ms ease;
   }
 
-  #stname .vg div, #stname .vg strong {
+  #stname .vg div,
+  #stname .vg strong {
     display: inline-block;
     opacity: 0;
     transform: translate3d(-1rem, 0, 0);
@@ -258,24 +264,24 @@
       </div>
 
       <div class="gallery" id="gallery">
-        <div class="gallery-item hl"><img class="gallery-image"  id="starry-night" src='./img/starrynight.jpg'
-          title="The starry night"></div>
+        <div class="gallery-item hl"><img class="gallery-image" id="starry-night" src='./img/starrynight.jpg'
+            title="The starry night"></div>
         <div class="gallery-item"><img class="gallery-image" id="self-portrait" src='./img/self-portrait.jpg'
-          title="Self-Portrait" /></div>
+            title="Self-Portrait" /></div>
         <div class="gallery-item"><img class="gallery-image" id="bedroom" src='./img/bedroom.jpg'
-          title="Vincent`s Bedroom in Arles" /></div>
+            title="Vincent`s Bedroom in Arles" /></div>
         <div class="gallery-item"><img class="gallery-image" id="sunflowers-bew" src='./img/Sunflowers-Bew.jpg'
-          title="“Sunflowers” (1889)" /></div>
+            title="“Sunflowers” (1889)" /></div>
         <div class="gallery-item"><img class="gallery-image" id="red-vineyards" src='./img/Red-Vineyards.jpg'
-          title="The Red Vineyard" /></div>
+            title="The Red Vineyard" /></div>
         <div class="gallery-item"><img class="gallery-image" id="sien_with_a_cigar" src='./img/sien_with_a_cigar.jpg'
-          title="Sien with a cigar" /></div>
+            title="Sien with a cigar" /></div>
         <div class="gallery-item"><img class="gallery-image" id="la-campesinos" src='./img/la-campesinos.jpg'
-          title="Rest from Work" /></div>
+            title="Rest from Work" /></div>
         <div class="gallery-item"><img class="gallery-image" id="soup-distribution" src='./img/Soup-Distribution.jpg'
-          title="Soup Distribution in a Public Soup Kitchen" /></div>
-        <div class="gallery-item"><img class="gallery-image" id="wheatfield_with_crows" src='./img/Wheatfield_with_Crows.jpg'
-          title="Wheatfield with Crows" /></div>
+            title="Soup Distribution in a Public Soup Kitchen" /></div>
+        <div class="gallery-item"><img class="gallery-image" id="wheatfield_with_crows"
+            src='./img/Wheatfield_with_Crows.jpg' title="Wheatfield with Crows" /></div>
 
       </div>
 
@@ -454,8 +460,8 @@
     </div>
   </div>
 
-  <script src='../static/lib/jquery/jquery.min.js'></script>
-  <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
+  <script src='../static/lib/jquery/jquery-3.6.4.min.js'></script>
+  <script src='../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
   <script src='../static/lib/bootstrap/js/bootstrap.bundle.min.js'></script>
   <script src='../static/lib/easing/easing.js'></script>
