--- a/examples/emotion_analysis/index.html
+++ b/examples/emotion_analysis/index.html
@@ -78,8 +78,8 @@
             <th class='text-center backendtitle'>Backend</th>
             <td>
               <div class='custom-control custom-switch'>
-                  <input type='checkbox' class='custom-control-input' id='backendswitch'>
-                  <label class='custom-control-label' for='backendswitch'>Dual</label>
+                <input type='checkbox' class='custom-control-input' id='backendswitch'>
+                <label class='custom-control-label' for='backendswitch'>Dual</label>
               </div>
               <div class='g b-polyfill'>
                 <span id='backendpolyfilltitle'>Polyfill</span>
@@ -203,7 +203,7 @@
                     <label for='input'><svg width='20' height='17' viewBox='0 0 20 17'>
                         <path
                           d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-                        </svg>
+                      </svg>
                       <span>Pick Image</span>
                     </label>
                   </div>
@@ -251,7 +251,8 @@
     <div class='container'>
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
-          <div id='trademark' class='mb-4'>TensorFlow, the TensorFlow logo and any related marks are trademarks of Google Inc.</div>
+          <div id='trademark' class='mb-4'>TensorFlow, the TensorFlow logo and any related marks are trademarks of
+            Google Inc.</div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'></div>
@@ -312,8 +313,8 @@
     </div>
   </div>
 
-  <script src='../static/lib/jquery/jquery.min.js'></script>
-  <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
+  <script src='../static/lib/jquery/jquery-3.6.4.min.js'></script>
+  <script src='../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
   <script src='../static/lib/bootstrap/js/bootstrap.bundle.min.js'></script>
   <script src='../static/lib/easing/easing.js'></script>
@@ -349,10 +350,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-147662084-1');
   </script>
 </body>
+
 </html>
