--- a/examples/face_recognition/index.html
+++ b/examples/face_recognition/index.html
@@ -78,8 +78,8 @@
             <th class='text-center backendtitle'>Backend</th>
             <td>
               <div class='custom-control custom-switch'>
-                  <input type='checkbox' class='custom-control-input' id='backendswitch'>
-                  <label class='custom-control-label' for='backendswitch'>Dual</label>
+                <input type='checkbox' class='custom-control-input' id='backendswitch'>
+                <label class='custom-control-label' for='backendswitch'>Dual</label>
               </div>
               <div class='g b-polyfill'>
                 <span id='backendpolyfilltitle'>Polyfill</span>
@@ -207,7 +207,7 @@
                     <label for='targetInput'><svg width='20' height='17' viewBox='0 0 20 17'>
                         <path
                           d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-                        </svg>
+                      </svg>
                       <span>Pick Faces Image</span>
                     </label>
                   </div>
@@ -219,7 +219,7 @@
                     <label for='input'><svg width='20' height='17' viewBox='0 0 20 17'>
                         <path
                           d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-                        </svg>
+                      </svg>
                       <span>Pick New Faces Image</span>
                     </label>
                   </div>
@@ -271,11 +271,12 @@
                     <label for='cameraImageInput'><svg width='20' height='17' viewBox='0 0 20 17'>
                         <path
                           d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-                        </svg>
-                        <span>Pick Faces Image</span>
+                      </svg>
+                      <span>Pick Faces Image</span>
                     </label>
                   </div>
-                  <span class='desc'>Upload frontally oriented faces image, results will be predicted from Live Camera.</span>
+                  <span class='desc'>Upload frontally oriented faces image, results will be predicted from Live
+                    Camera.</span>
                 </div>
               </div>
             </div>
@@ -354,8 +355,8 @@
     </div>
   </div>
 
-  <script src='../static/lib/jquery/jquery.min.js'></script>
-  <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
+  <script src='../static/lib/jquery/jquery-3.6.4.min.js'></script>
+  <script src='../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
   <script src='../static/lib/superfish/superfish.min.js'></script>
   <script src='../static/lib/bootstrap/js/bootstrap.bundle.min.js'></script>
   <script src='../static/lib/easing/easing.js'></script>
@@ -395,7 +396,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'UA-147662084-1');
   </script>
